[package]
name = "identity"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
tonic = "0.9.1"
prost = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
ed25519-dalek = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
derive_more = { workspace = true }
comm-lib = { path = "../../shared/comm-lib", features = [
  "aws",
  "grpc_clients",
  "blob-client",
  "crypto",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
chrono = { workspace = true }
rand = "0.8"
constant_time_eq = "0.2.2"
siwe = { workspace = true }
time = { workspace = true }
comm-opaque2 = { path = "../../shared/comm-opaque2" }
grpc_clients = { path = "../../shared/grpc_clients" }
hyper = { workspace = true }
hyper-tungstenite = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }
tonic-web = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tunnelbroker_messages = { path = "../../shared/tunnelbroker_messages" }
identity_search_messages = { path = "../../shared/identity_search_messages" }
uuid = { workspace = true, features = ["v4"] }
base64 = { workspace = true }
regex = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
http = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart", "rustls-tls"] }
sha2 = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
tower = { workspace = true }

[build-dependencies]
tonic-build = "0.9.1"
