[package]
name = "reports"
description = "reports service"
homepage = "https://comm.app"
license = "BSD-3-Clause"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
anyhow = "1.0"
aws-config = "0.55"
aws-sdk-dynamodb = "0.27"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
comm-services-lib = { path = "../comm-services-lib", features = [
  "blob-client",
  "http",
] }
derive_more = "0.99"
hex = "0.4"
http = "0.2"
maud = "0.25"
num-traits = "0.2"
num-derive = "0.4"
once_cell = "1.17"
postmark = { version = "0.8", features = ["reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
sha2 = "0.10"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7.3"
uuid = { version = "1.2", features = ["v4"] }
