[package]
name = "reports"
version = "0.1.0"
description = "reports service"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
comm-lib = { path = "../../shared/comm-lib", features = [
  "blob-client",
  "http",
  "crypto",
  "aws",
  "grpc_clients",
] }
derive_more = { workspace = true }
http = { workspace = true }
maud = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
once_cell = { workspace = true }
postmark = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-actix-web = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
