[package]
name = "search-index-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0.12.0"

lambda_runtime = "0.8.1"
reqwest = "0.11.22"
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }
openssl = { version = "0.10", features = ["vendored"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde_derive = "1.0.193"
serde = "1.0.193"
aws-smithy-types = "1.1.1"
anyhow = "1.0.75"
