[package]
name = "search-index-lambda"
version = "0.1.0"
edition = "2021"

# [profile.release]
# opt-level = 'z'
# lto = true
# codegen-units = 1

[dependencies]
aws_lambda_events = "0.12.0"

lambda_runtime = "0.8.1"
log = "0.4.20"
reqwest = "0.11.22"
# serde = "1.0.136"
serde_json = "1.0.108"
simple_logger = "4.2.0"
tokio = { version = "1", features = ["macros"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = "1.0.192"
