[package]
name = "tunnelbroker"
version = "0.5.0"
links = "tunnelbroker"
description = "Tunnelbroker server"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive", "env"] }
comm-lib = { path = "../../shared/comm-lib", features = [
  "aws",
  "grpc_clients",
] }
futures-util = "0.3"
grpc_clients = { path = "../../shared/grpc_clients" }
hyper = "0.14"
hyper-tungstenite = "0.11"
once_cell = "1.17"
prost = "0.11"
serde_json = "1.0"
tokio = { version = "1.24", features = ["rt-multi-thread"] }
tonic = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tunnelbroker_messages = { path = "../../shared/tunnelbroker_messages" }
derive_more = "0.99.17"
lapin = "2.2.1"
chrono = "0.4.31"
uuid = { version = "1.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.8"
