[package]
name = "tunnelbroker"
version = "0.5.0"
links = "tunnelbroker"
description = "Tunnelbroker server"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
comm-lib = { path = "../../shared/comm-lib", features = [
  "aws",
  "grpc_clients",
] }
futures-util = { workspace = true }
grpc_clients = { path = "../../shared/grpc_clients" }
hyper = { workspace = true }
hyper-tungstenite = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tunnelbroker_messages = { path = "../../shared/tunnelbroker_messages" }
derive_more = { workspace = true }
lapin = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
jsonwebtoken = "9.3.0"
web-push = { version = "0.11.0", features = [
  "hyper-client",
], default-features = false }
reqwest = { workspace = true, features = ["json", "native-tls", "rustls-tls"] }
serde.workspace = true
tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"

[build-dependencies]
tonic-build = "0.8"
