[package]
name = "backup_client"
version = "0.1.0"
edition = "2021"

[dependencies]
comm-lib = { path = "../comm-lib" }
reqwest = { version = "0.11", default-features = false, features = [
  "multipart",
  "stream",
] }
url = "2.3.1"
derive_more = "0.99"
serde_json = { version = "1.0" }
async-stream = "0.3.2"
sha2 = "0.10"
hex = "0.4.3"
tokio-tungstenite = "0.18.0"
futures-util = "0.3"
bincode = "1.3.3"
tokio = "1.24"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "tokio-tungstenite/rustls-tls-native-roots"]
