[package]
name = "backup_client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
comm-lib = { path = "../comm-lib" }
reqwest = { version = "0.11", default-features = false, features = [
  "multipart",
  "stream",
] }
url = "2.3.1"
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
async-stream = "0.3.2"
sha2 = "0.10"
hex = "0.4.3"
tokio-tungstenite-wasm = "0.2.1"
futures-util = "0.3"
bincode = "1.3.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = "1.24"
tokio-tungstenite = "0.20.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
comm-lib = { path = "../comm-lib", features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.39"
serde-wasm-bindgen = "0.6.3"
web-sys = { version = "0.3.68", features = ["Window"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots", "tokio-tungstenite/rustls-tls-webpki-roots"]
