[package]
name = "backup_client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
comm-lib = { path = "../comm-lib" }
reqwest = { workspace = true, features = ["multipart", "stream"] }
url = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-stream = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio-tungstenite-wasm = { workspace = true }
futures-util = { workspace = true }
bincode = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = "1.24"
tokio-tungstenite = "0.20.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
comm-lib = { path = "../comm-lib", features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.39"
serde-wasm-bindgen = "0.6.3"
web-sys = { version = "0.3.68", features = ["Window"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
rustls-tls-webpki-roots = [
  "reqwest/rustls-tls-webpki-roots",
  "tokio-tungstenite/rustls-tls-webpki-roots",
]
