[package]
name = "comm-lib"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[features]
blob-client = [
  "dep:bytes",
  "dep:reqwest",
  "dep:futures-core",
  "dep:futures-util",
]
http = [
  "dep:actix-cors",
  "dep:actix-web",
  "dep:actix-multipart",
  "dep:futures-core",
  "dep:futures-util",
  "dep:http",
  "dep:tokio-stream",
  "dep:actix-web-httpauth",
]
crypto = ["dep:aead", "dep:aes-gcm", "dep:bytes"]
aws = ["dep:aws-config", "dep:aws-sdk-dynamodb", "dep:aws-sdk-secretsmanager"]
grpc_clients = ["dep:grpc_clients"]
web = ["uuid/js"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
chrono.workspace = true
constant_time_eq = "0.3"
derive_more = "0.99"
grpc_clients = { path = "../grpc_clients", optional = true }
rand = "0.8"
tokio.workspace = true
tracing = "0.1"
anyhow = "1.0.74"
hex = "0.4"
uuid = { version = "1.2", features = ["v4"] }
sha2 = "0.10"
# aws dependencies
aws-config = { version = "0.55", optional = true }
aws-sdk-dynamodb = { version = "0.27", optional = true }
aws-sdk-secretsmanager = { version = "0.27", optional = true }
# blob client dependencies
bytes = { version = "1.4", optional = true }
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
reqwest = { version = "0.11", features = [
  "json",
  "multipart",
  "stream",
], optional = true }
# http dependencies
actix-cors = { version = "0.6", optional = true }
actix-web = { version = "4.3", optional = true }
http = { version = "0.2.9", optional = true }
actix-web-httpauth = { version = "0.8.0", optional = true }
actix-multipart = { version = "0.6", optional = true }
tokio-stream = { version = "0.1.14", optional = true }
# crypto dependencies
aes-gcm = { version = "0.10", optional = true }
aead = { version = "0.5", features = ["bytes"], optional = true }
once_cell = "1.17"
