[package]
name = "comm-lib"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[features]
blob-client = [
  "dep:bytes",
  "dep:reqwest",
  "dep:futures-core",
  "dep:futures-util",
  "dep:tokio-stream",
]
http = [
  "dep:actix-cors",
  "dep:actix-web",
  "dep:actix-multipart",
  "dep:futures-core",
  "dep:futures-util",
  "dep:http",
  "dep:tokio-stream",
  "dep:actix-web-httpauth",
]
crypto = ["dep:aead", "dep:aes-gcm", "dep:bytes"]
aws = ["dep:aws-config", "dep:aws-sdk-dynamodb", "dep:aws-sdk-secretsmanager"]
grpc_clients = ["dep:grpc_clients"]
web = ["uuid/js"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
constant_time_eq = "0.3"
derive_more = { workspace = true }
grpc_clients = { path = "../grpc_clients", optional = true }
rand = "0.8"
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
sha2 = { workspace = true }
# aws dependencies
aws-config = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
aws-sdk-secretsmanager = { workspace = true, optional = true }
# blob client dependencies
bytes = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
reqwest = { workspace = true, features = [
  "json",
  "multipart",
  "stream",
], optional = true }
# http dependencies
actix-cors = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true }
http = { workspace = true, optional = true }
actix-web-httpauth = { workspace = true, optional = true }
actix-multipart = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
# crypto dependencies
aes-gcm = { workspace = true, optional = true }
aead = { workspace = true, features = ["bytes"], optional = true }
once_cell = { workspace = true }
