[package]
name = "comm-opaque"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4"
opaque-ke = "1.2"
digest = "0.9"
curve25519-dalek = "3.2"
sha2 = "0.9"
rand = "0.8.5"
once_cell = "1.17.1"
tonic = { version = "0.8", default-features = false }
instrument = "0.2.0"
log = "0.4.17"
