[package]
name = "comm-opaque"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.4"
getrandom = { version = "0.2", features = [ "js", "wasm-bindgen" ] }
log = "0.4"
opaque-ke = { version = "2.0", features = [ "argon2" ] }
rand = "0.8"
tonic = { version = "0.8", default-features = false }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimise for small code size
opt-level = "s"
strip = "debuginfo"
