[package]
name = "comm-opaque2"
version = "0.2.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
argon2 = "0.4"
log = "0.4"
opaque-ke = { version = "2.0", features = [ "argon2" ] }
rand = "0.8"
tonic = { version = "0.9.1", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1.0.197", features = ["derive"] }
