[package]
name = "identity_client"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99"
prost = "0.11"
tonic = { version = "0.9.1", features = ["tls"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.9.1"
