[package]
name = "grpc_clients"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more = "0.99"
prost = "0.11"
tonic = { version = "0.9.1", features = ["tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9.1"
