[package]
name = "grpc_clients"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more = { workspace = true }
prost = { workspace = true }
tonic = { version = "0.9.1", features = ["tls-webpki-roots"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
tonic-build = "0.9.1"
