[package]
name = "tunnelbroker-client"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
tonic = "0.8"
prost = "0.11"
lazy_static = "1.4"
tracing = "0.1"
futures = "0.3"
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.8"
