[package]
name = "tunnelbroker_messages"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = [ "derive" ] }
serde_json = "1.0.96"
websocket_messages = { path = "../websocket_messages" }
