[package]
name = "tunnelbroker_messages"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
websocket_messages = { path = "../websocket_messages" }
util_macros = { path = "../util_macros" }
