[package]
name = "backup-client-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
backup_client = { path = "../../shared/backup_client", default-features = false }

# Optimize for small code size
[profile.release]
opt-level = "s"
strip = "debuginfo"
