[package]
name = "comm-opaque2-wasm"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
comm-opaque2 = { path = "../../shared/comm-opaque2" }
getrandom = { version = "0.2", features = [ "js", "wasm-bindgen" ] }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for small code size
opt-level = "s"
strip = "debuginfo"
